added endpoint to add mediators
